# parser_vak

./: README.md  abstract_class.py  hh.py  main.py  pyproject.toml  superjob.py  utils.py  vacancy_class.py  vacancy_hh.json  vacancy_sj.json
