[tool.poetry]
name = "parser-vak"
version = "0.1.0"
description = ""
authors = ["ppolindrom <ipollyce@mail.ru>"]
readme = "README.md"
packages = [{include = "parser_vak"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
